# fisheye-tools

./: .gitignore  CPP_RUST_COMPARISON.md  CPP_RUST_COMPARISON_FRAMEWORK.md  Cargo.toml  DEBUGGING_SUMMARY.md  README.md  compare_results.py  cpp_vs_rust_benchmark_comparison.txt  rust_benchmark_results.txt
.github/workflows/: release.yml  rust.yml
examples/: all_conversions.rs  camera_model_2_model.rs  camera_model_conversion.rs  camera_model_converter.rs  final_demo.rs
output/: double_sphere_saved.yaml  rad_tan_saved.yaml
samples/: README.md  double_sphere.yaml  kannala_brandt.yaml  pinhole.yaml  rad_tan.yaml  test.txt  tum.yaml  ucm.yaml
src/: lib.rs  main.rs
src/camera/: double_sphere.rs  eucm.rs  kannala_brandt.rs  mod.rs  pinhole.rs  rad_tan.rs  ucm.rs
src/double_sphere/: double_sphere.yaml  mod.rs
src/geometry/: mod.rs
src/kannala_brandt/: mod.rs
src/optimization/: debug.rs  double_sphere.rs  eucm.rs  kannala_brandt.rs  mod.rs  rad_tan.rs  ucm.rs
src/pinhole/: mod.rs  pinhole.yaml
src/rad_tan/: mod.rs
src/util/: mod.rs
