[package]
name = "fisheye-tools"
version = "0.3.0"
edition = "2021"
authors = ["Amin Abouee"]
description = "A Rust library for fisheye camera model conversions"
license = "MIT"

[dependencies]
nalgebra = "0.33.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
yaml-rust = "0.4"
thiserror = "2.0.12"
kornia = "0.1.9"
clap = { version = "4.5.38", features = ["derive"] }
flexi_logger = "0.30"
log = "0.4"
approx = "0.5.1"
factrs = "0.2.0"
